# pplogger

./: LICENSE  Makefile  README.md  mkdocs.yml  pplogger.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: index.md  intro.md  processor.md
pplogger/: __init__.py  context.py  formatters.py  logger.py
processor/: .gitignore  go.mod  inode_other.go  inode_unix.go  main.go  main_test.go
tests/: test_logger.py
