[tool.poetry]
name = "pplogger"
description = "pplogger package"
authors = ["Jose Luis Alonzo Velazquez <pepemxl@gmail.com>"]
readme = "README.md"
repository = "https://github.com/pepemxl/pplogger.git"
version = "0.0.1"
packages = [ {include="pplogger"}]
[tool.poetry.dependencies]
python = "3.10.*"
termcolor = "^2.3.0"
pygments = "^2.15.1"
requests = "^2.31.0"
flatten-json = "^0.1.13"

[tool.poetry.group.dev.dependencies]
pytest = '*'
ipython = '*'
coverage = '*'
pre-commit = '*'

[tool.poetry.group.test.dependencies]
pytest = "*"

[tool.poetry.scripts]
sdi = 'pplogger.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"