[tool.poetry]
# Distribution name on PyPI (the importable package is still `pplogger`).
name = "pepe-logger"
description = "Structured JSON logging for distributed systems, with a Go log shipper."
authors = ["Jose Luis Alonzo Velazquez <pepemxl@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/pepemxl/pplogger"
repository = "https://github.com/pepemxl/pplogger.git"
documentation = "https://github.com/pepemxl/pplogger"
keywords = ["logging", "json", "observability", "distributed-systems", "structured-logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
version = "0.0.2"
packages = [ {include="pplogger"}]
[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.dev.dependencies]
pytest = '*'
pytest-cov = '*'
ipython = '*'
coverage = '*'
pre-commit = '*'
mypy = '*'
ruff = '*'
mkdocs = '*'
mkdocs-material = '*'

[tool.poetry.group.test.dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["pplogger", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
files = ["pplogger"]
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "--cov=pplogger --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pplogger"]

[tool.coverage.report]
show_missing = true